--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
-<head>
-    <h1>this is branch test</h1>
-</head>
+<html>
+    <head>
+        <h1>this is quickTest test</h1>
+    </head>
+    <body>
+        <h1>hello world!</h1>
+    </body>
+</html>
